Submissions fix
